update bus stop format

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL="mongodb+srv://BTCloud:1908@srilankabus.inex5rg.mongodb.net/?retryWrites=true&w=majority&appName=SriLankaBus"
+MONGODB_URL="mongodb+srv://BTCloud:1908@srilankabus.inex5rg.mongodb.net/cloud_db?retryWrites=true&w=majority&appName=SriLankaBus"
 PORT=8001
